objects/Comarch_Auth_Provider__mdt.object
<CustomObject>
    <label>Comarch Auth Provider</label>
    <pluralLabel>Comarch Auth Providers</pluralLabel>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <description>Oauth client id, also known as Consumer Key</description>
        <inlineHelpText>Oauth client id, also known as Consumer Key</inlineHelpText>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callback_URL__c</fullName>
        <description>Auth callback url</description>
        <label>Callback URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Program_Code__c</fullName>
        <label>Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <description>Oauth client secret, also known as Consumer Secret</description>
        <inlineHelpText>Oauth client secret, also known as Consumer Secret</inlineHelpText>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Token_URL__c</fullName>
        <description>URL to retrieve the access token</description>
        <label>Access Token URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Use_JSON_Encoding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the OAuth Flow encode the Request Parameters as JSON?</description>
        <label>Use JSON Encoding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auth_Provider_Name__c</fullName>
        <description>Unique name of the auth provider using this CMT</description>
        <label>Auth Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>